<resources>
    <string name="app_name">Mapping</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_not_now">not now</string>
    <string name="dialog_sign_in_need">Sign In Needed</string>
    <string name="dialog_sign_in_need_contnet">You have to sign in to start this feature. Go to sign in?</string>
    <string name="dialog_log_in">Log in</string>
    <string name="dialog_sign_up">Sign up</string>
    <string name="dialog_submit">Submit</string>
    <string name="dialog_facebook_login">Log in with Facebook</string>
    <string name="dialog_forgot_password">Forgot password</string>
    <string name="dialog_log_out_content">Are you sure to log out?</string>
    <string name="dialog_internet_error_title">Error</string>
    <string name="dialog_internet_error_content">cannot connect to server or server error!</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_progressing">Progressing...</string>
    <string name="dialog_select">select</string>
    <string name="dialog_project_title">Please select a project</string>
    <string name="add_project_content">You dot\'t have any project in your account. Please contact richard.chin@ipsmap.com for further information.</string>
    <string name="menu_project">Project</string>
    <string name="action_switch_project">Switch to another project</string>
    <string name="no_buildingid_or_token">The building id and token are not set, please check!</string>
    <string name="dialog_load_map">Loading map...</string>
    <string name="menu_account">Account</string>
    <string name="menu_switch_project">Switch Project</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_accuracy_verification">Accuracy Verification</string>
    <string name="menu_beacon_patrolling">Beacon Patrolling</string>
    <string name="menu_poi_mapping">POI Mapping</string>
    <string name="dialog_confirm_logout">Are you sure to logout?</string>
    <string name="dialog_load_pois">Loading POIs...</string>
    <string name="poi_name_hint">Please input POI\'s name</string>
    <string name="poi_link_hint">Please input POI\'s link</string>
    <string name="poi_qr_scan">QR Code</string>
    <string name="poi_move">move</string>
    <string name="poi_delete">delete</string>
    <string name="poi_save">save</string>
    <string name="poi_close">discard</string>
    <string name="dialog_poi_delete_title">Are you sure to delete?</string>
    <string name="dialog_poi_deleting">Deleting...</string>
    <string name="dialog_poi_saving">Saving...</string>
    <string name="poi_place">place</string>
    <string name="poi_detail">Detail</string>
    <string name="poi_add">+ POI</string>
    <string name="action_start_positioning">Start positioning</string>
    <string name="action_stop_positioning">Stop positioning</string>
    <string name="poi_add_check">+ Check Point</string>
    <string name="beacon_patrolling_upload">Upload</string>
    <string name="dialog_uploading">Uploading...</string>
    <string name="dialog_upload_successfully">upload beacon status successfully!</string>
    <string name="upload_to_creatidea_cloud_error">Get trouble to send data to the Creatidea cloud</string>
    <string name="poi_check_comment_hint">Please input the comment</string>
    <string name="poi_visible_layer_title">Visible Layers</string>
    <string name="dialog_search">search</string>
    <string name="poi_search_hint">input the check point id</string>
    <string name="check_point_not_found">check point not found!</string>
    <string name="dialog_load_check_points">Load check points...</string>
    <string name="acc_verify_samples">Samples:</string>
    <string name="acc_verify_accuracy">Avg. Accuracy:</string>
    <string name="acc_verify_meter">m</string>
    <string name="acc_verify_deviation">Std. Deviation:</string>
    <string name="acc_verify_sample">Sample</string>
    <string name="version">Version</string>
    <string name="beacon_not_found">beacon not found!</string>
    <string name="beacon_search_hint">Please input last two bytes of beacon\'s mac addr</string>
    <string name="dialog_delete_result">Are you sure to delete measurement results?</string>
    <string name="measurement_title_hint" >Please input the title of these measurement results</string>
    <string name="dialog_log_out_title">Logout</string>


</resources>
